--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <div>
   <div>
-    <h1>Juniper Designs</h1>
+    <title>
+    <h1>j money</h1>
+  </title>
     </div>
     <div>
   <nav>
