Revert "update index.html page title"
This reverts commit b2c5d535d4603d3b3a9c9bf78d3cda5455c43e38.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
   <div>
   <div>
-    <title>
-    <h1>j money</h1>
-  </title>
+    <h1>Juniper Designs</h1>
     </div>
     <div>
   <nav>
