New Project Page added for Communal

--- a/Communal.html
+++ b/Communal.html
@@ -18,56 +18,74 @@
   </div>
 </head>
 <main>
-    <div>
-    <div><h2>Greetings
-    <h3>I'm Juniper Stanley</h3></h2>
-    <p><!--open paragraph--></p>
+
+</main>
+<div>
+    <h1>Communal</h1>
+    <picture>
+    <img src="communal.jpeg" media="(max-width:767px)"></img>
+    </picture>
+    <p><!-- open paragraph-->
+      Communal started as a way to connect people who live in close proximity to one another with trade and skills on a platform reminiscent of several social media platforms.
+    </p><!-- end paragraph-->
   </div>
+  <div>
+    <h2>My Process</h2>
+    <div>
+      <picture>
+        <img src="communal lo fi ss.jpeg" media="(maxwidth:767px)"></img>
+      </picture>
     </div>
     <div>
-    <h2>My Work</h2>
-    <div><!--open row that holds 2 columns for project-->
-    <div><!-- open first column (for image)-->
-    <picture>
-    <src srcset="Juniper Deisgns BACKGROUND.pdf/600x400" media="(max width 767p)">
-    <img src="Juniper Designs BACKGROUND.pdf/1200x800" alt="My Image">
-    </picture>
-    </div><!-- end of first column-->
-    <div><!-- open second column(used for text)-->
-    <h3>Communal</h3><!-- heading for the project-->
-    <picture>
-      <img src="communal.jpeg" media-"(max-width:767px)"></img>
+      <h3>Research</h3>
+      <p><!-- open paragraph-->
+        When I began to develop the low fidelity wireframes for Communal, I realized that I was passionate about making this app my greatest. I draw functional inspiration from sites and apps like Zillow, LinkedIn,Snapchat, and Facebook to get it to the level where I want it to be.
+      </p><!-- close paragraph-->
+    </div>
+    <div>
+      <h3>Ideation and Wireframe</h3></div>
+      <div>
+      <picture>
+        <img src="mid fi communal 10 ss.jpeg" media="(max width 767px)"></img>
+        <img src="mid fiscommunal 5 ss.jpeg" media="(max width:767px)"</img>
       </picture>
-    <p><!--open paragraph-->
-    In this project, I used Sketch, Figma, and Iconfinder.
-    </p><!-- end of paragraph-->
-    <a href="Communal.html">View Project<!-- button or link label--></a>
-  </div><!-- end of second column-->
-  <div><!-- open second column(used for text)-->
-    <h3>Heim</h3><!-- heading for the project-->
-    <picture>
-  <source srcset="Heim Cover.jpg" media-"(max-width:767px)">
-  </picture>
-<p><!--open paragraph-->
-In this project, I used Sketch, Figma, and Iconfinder.
-</p><!-- end of paragraph-->
-<a href="about.html#skills">View Project<!-- button or link label--></a>
-</div><!-- one row that holds two columns for project-->
-<div><!-- open second column(used for text)-->
-  <h3>Pocket Prosperity</h3><!-- heading for the project-->
-  <picture>
-<source srcset="Pocket Prosperity coverpage.jpeg" media-"(max-width:767px)">
-</picture>
-<p><!--open paragraph-->
-In this project, I used Sketch, Figma, and Iconfinder.
-</p><!-- end of paragraph-->
-<a href="about.html#skills">View Project<!-- button or link label--></a>
-</div><!-- one row that holds two columns for project-->
-</main>
-
+    </div>
+    <div>
+      <p><!-- open paragraph-->
+        My focus for the wireframes (both iOS and Android) is elegance and functionality. Is it wasy to use? Does the intuitive flow make sense? Once I figured the answers out to these questions, I was able to dive into the development of each wireframe. I want users to comfortable and like they’re in a familiar place when interacting with Communal.
+      </p><!-- close paragraph-->
+    </div>
+    <div>
+      <h3>Design</h3>
+    </div>
+    <div>
+      <picture>
+        <img src="Communal User Flow.jpeg" media="(max widthe 767)"></img>
+      </picture>
+    </div>
+      <div>
+      <p><!-- open paragraph-->
+        My approach with design was to lay out a clean path to show users where they can go and what they can do with ease and simplicity.
+      </p><!-- close paragraph-->
+    </div>
+      <ul>
+      <nav>
+      <li><a href="https://juniper948713.invisionapp.com/console/share/P9362R7723" target="blank">iOS Prototype</a></li>
+    </ul>
+    <ul>
+      <li><a href="https://juniper948713.invisionapp.com/console/share/FC35I3DRVD" target="blank">Android Prototype</a></li>
+      <nav>
+      </ul>
+    </div>
+    <div>
+      <h3>Conclusion</h3>
+      <p><!-- open paragraph-->
+        I believe that this app is a gateway to a future where communities worldwide can rely on each other and come together in so many ways.
+      </p><!-- end paragraph-->
+    </div>
 <footer>
       <div>
-      <h2>Contact Me</h2>
+      <h2>Get In Touch</h2>
       <nav>
       <ul>
       <li><a href="mailto:juniperstanley7@gmail.com">Email</a><!-- button or link label--></li>
