--- a/about.html
+++ b/about.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" dir= "ltr">
 <body>
+  <body style="background-color: #E5E2D4;">
 <head>
+  <meta name="viewport content="width=device-wis\dth, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.com/libraries/normalize">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <style>
+  code{
+    color: #A8D069;
+    background-color: #E5E2D4;
+    font-family:'Merriweather', sans-serif;
+    font-size: 24px;
+    line-height:1.6;
+  }
+  h1, h2, h3, h4 {
+  line-height: 1.4;
+}
+h1 {
+  font-size: 2.75em;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2.25em;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.75em;
+  font-weight: 400;
+}
+h4 {
+  font-size: 1.35em;
+  font-weight: 400;
+}
+      button{
+        display: inline- block
+        background-color: #DF6E28;
+        font weight: 400;
+        font color: #ffffff;
+        padding: 10px;
+        border-radius: 3px;
+        border-bottom:2px solid #A8D069;
+        transition: 0.2s opacity;
+      }
+      button:hover {
+  opacity: 0.8;
+  text-decoration: none;
+}
+button.conact{
+  background-color:#FACE6A;
+  text-transform:uppercase;
+  border:2px solid #FACE6A;
+}
+button.contact:hover {
+  background-color: #FACE6A
+  color: #ffffff;
+}
+#hero-section{
+  color: #DF6E28;
+}
+#work-section{
+  color: #DF6E28;
+}
+#contact-section{
+  color: #DF6E28
+}
+      </style>
   <div>
   <div>
-    <h1>Juniper Designs</h1>
+    <h1><code>Juniper Designs</code></h1>
     </div>
     <div>
   <nav>
@@ -19,32 +87,31 @@
 </head>
 <main>
     <div>
-      <meta title="My Story" content="text html;" charset= utf-8">
+      <code><meta title="My Story" content="text html;" charset= utf-8"></code>
       <div>
-    <picture>
-      <src srcset="JuniperProfile.svg" media="(max width 766p)">
-        <img src="JuniperProfile.svg" alt="My Profile Picture">
-    </picture>
+        <picture>
+          <img src="JuniperProfile.svg" alt="My Profile Picture">
+        </picture>
     </div>
     <p><!--open paragraph--></p>
     <div><!--open row that holds 2 columns for My Story-->
     <!--open first column (for my story)-->
     <div>
-    <h2>My Story</h2>
-    <p>
-      My name is Juniper, I am a 26- year-old single mom from Denver, CO looking to change the world, one technological advance
+    <h2><code>My Story</code></h2>
+    <p><class="hero-section" id="hero-section">
+      My name is Juniper, I am a 26- year-old single mom living in Denver, CO looking to change the world, one technological advance
 at a time. In the world today, technology is becoming more present than ever- and will continue to do so. What does that have to do with me? Well, as someone who cares deeply for this planet and the beings in communities on it, I want to extend the horizons of sustainability and agriculture/ permaculture companies worldwide. To give them tools to reach more, to raise more, to be MORE.
 </p>
     <p><!--open paragraph--></p>
     <a href= "https://juniper-designs.webflow.io" target="blank">Visit My Resume</a>
     </div><!-- end of first column-->
     <div><!--open second column (for skills & tools)-->
-    <h2>Skills & Tools</h2>
+    <h2><code>Skills & Tools</code></h2>
     <div>
-      <p>
+      <p><class="skills&tools-section" id="skills&tools-section">
         As a UI/ UX Designer, I have acquired many different skills. They are listed below:
           </p>
-      <h3>Relevant Skills</h3></div>
+      <h4>Relevant Skills</h4></div>
       <li>Sketch, Adobe, Figma</li>
       <li>User Flow</li>
       <li>Website, Logo, and Branding Develoment</li>
@@ -57,7 +124,7 @@ at a time. In the world today, technology is becoming more present than ever- an
     </div><!--end of second column-->
     <div><!-- open third column (for tools)-->
     <div>
-      <h3>Tools I Use</h3>
+      <h4>Tools I Use</h4><class="toolsiuse-section" id="toolsiuse-section">
     <li>Sketch, Adobe, Figma</li>
     <li>Unsplash</li>
     <li>IconFinder</li>
@@ -73,24 +140,22 @@ at a time. In the world today, technology is becoming more present than ever- an
       <h2>Contact Me</h2>
       <nav>
       <ul>
-      <li><a href="mailto:juniperstanley7@gmail.com">Email</a><!-- button or link label--></li>
+      <li><a href="mailto:juniperstanley7@gmail.com" class= "button.contact">Email</a><!-- button or link label--></li>
       <li><a href="tel:9287106413">Phone</a><!-- button or link label--></li>
       </ul>
       </nav>
       </div>
       <p><!-- open paragraph--></p>
       <!--Social Media Layout and Placeholders-->
-      <h3>Social Media</h3>
+      <h3><code>Social Media</code></h3>
       <div>
       <ul>
-        <h4>Twitter</h4>
-      <a href="https://twitter.com/juniper stanley" target="blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/></svg></a>
+      <a href="https://twitter.com/juniper stanley" target="blank"><h4><code>Twitter</code></h4><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/></svg></a>
           </ul>
             </div>
             <div>
               <ul>
-                <h4>LinkedIn</h4>
-              <a href="https://www.linkedin.com/in/juniper-stanley-68944a160/" target="blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
+              <a href="https://www.linkedin.com/in/juniper-stanley-68944a160/" target="blank"><h4><code>LinkedIn</code></h4><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
               <ul></a>
           </ul>
             </div>
