Image Width Set About.html

--- a/Communal.html
+++ b/Communal.html
@@ -61,6 +61,9 @@ button.contact:hover {
 #contact-section{
   color: #DF6E28
 }
+{
+  image width: 100%
+}
   </style>
   <h4><code>LinkedIn</code></h4>
   <div>
