--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ button.contact:hover {
 #contact-section{
   color: #DF6E28
 }
+{
+  image width: 100%
+}
       </style>
   <div>
     <h1><code>Juniper Designs</code></h1>
