Updated Profile picture file path

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@ Secondary Color (green): #A8D069;
 Tertiary Color (yellow): #FACE6A
 */
 <html lang="en" dir= "ltr">
+      <style>
+      * {
+        box-sizing: border-box;
+      }
+      </style>
 <body>
   <body style="background-color: #E5E2D4;">
 <style>
@@ -21,40 +26,40 @@ Tertiary Color (yellow): #FACE6A
     }
     </style>
 <head>
-  <meta name="viewport content="width=device-wis\dth, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.com/libraries/normalize">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <style>
-  code{
-    color: #DF6E28;
-    background-color: #E5E2D4;
-    font-family:'Merriweather', sans-serif;
-    font-size: 24px;
-    line-height:1.6;
-  }
-  h1, h2, h3, h4 {
-  line-height: 1.4;
-}
-h1 {
-  font-size: 2.75em;
-  font-weight: 700;
-}
+        <meta name="viewport content="width=device-wis\dth, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.com/libraries/normalize">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <style>
+          code{
+            color: #DF6E28;
+            background-color: #E5E2D4;
+            font-family:'Merriweather', sans-serif;
+            font-size: 24px;
+            line-height:1.6;
+          }
+          h1, h2, h3, h4 {
+          line-height: 1.4;
+        }
+        h1 {
+          font-size: 2.75em;
+          font-weight: 700;
+        }
 
-h2 {
-  font-size: 2.25em;
-  font-weight: 700;
-}
+        h2 {
+          font-size: 2.25em;
+          font-weight: 700;
+        }
 
-h3 {
-  font-size: 1.75em;
-  font-weight: 400;
-}
-h4 {
-  font-size: 1.35em;
-  font-weight: 400;
-}
+        h3 {
+          font-size: 1.75em;
+          font-weight: 400;
+        }
+        h4 {
+          font-size: 1.35em;
+          font-weight: 400;
+        }
       button{
         display: inline- block
         background-color: #DF6E28;
@@ -64,133 +69,120 @@ h4 {
         border-radius: 3px;
         border-bottom:2px solid #A8D069;
         transition: 0.2s opacity;
+            }
+            button:hover {
+        opacity: 0.8;
+        text-decoration: none;
+            }
+      button.conact{
+        background-color:#FACE6A;
+        text-transform:uppercase;
+        border:2px solid #FACE6A;
       }
-      button:hover {
-  opacity: 0.8;
-  text-decoration: none;
-}
-button.conact{
-  background-color:#FACE6A;
-  text-transform:uppercase;
-  border:2px solid #FACE6A;
-}
-button.contact:hover {
-  background-color: #FACE6A
-  color: #ffffff;
-}
-#aboutme-section{
-  color: #DF6E28
-}
-#mywork-section{
-  color: #DF6E28
-}
-#contact-section{
-  color: #DF6E28
-}
-{
-  image width: 100%
-}
+      button.contact:hover {
+        background-color: #FACE6A
+        color: #ffffff;
+      }
+      #aboutme-section{
+        color: #DF6E28
+      }
+      #mywork-section{
+        color: #DF6E28
+      }
+      #contact-section{
+        color: #DF6E28
       </style>
-  <div>
-    <h1><code>Juniper Designs</code></h1>
-    <p>My color is coming from the <code>style.css</code> file</p>
-    </div>
-    <div>
-  <nav>
-    <ul>
-  <li><a href="https://www.behance.net/juniperdesigns" target="blank">Portfolio</a></li>
-  <li><a href="about.html" target="blank">About</a></li>
-  <li><a href="mailto:juniperstanley7@gmail.com" target="blank">Contact</a></li>
-</ul>
-  </nav>
-  </div>
-  </div>
+      <header>
+      <div>
+        <h1><code>Juniper Designs</code></h1>
+        <p>My color is coming from the <code>style.css</code> file</p>
+        </div>
+        <div>
+      <nav>
+        <ul>
+      <li><a href="https://www.behance.net/juniperdesigns" target="blank">Portfolio</a></li>
+      <li><a href="about.html" target="blank">About</a></li>
+      <li><a href="mailto:juniperstanley7@gmail.com" target="blank">Contact</a></li>
+    </ul>
+      </nav>
+      </div>
+      </div>
 </head>
 <main>
     <div>
-    <div><h2><code>Greetings</code>
-      <class="hero-section" id:"#hero-section"
-    <h3>I'm Juniper Stanley UX-UI Designer</h3></h2>
-    <p>I’m a UI/UX Designer based in
-Denver, CO. Juniper Designs is
-a minimalistic- styled company
-specializing in curating various
-design elements focused on
-precision, customer satisfaction,
-and innovative creativity. I love
-being challenged through new
-projects, and am always on the
-lookout for positions in the
-sustainability industry.</p>
-  </div>
-    </div>
-    <div>
-    <h2><code>My Work</code></h2>
-    <class="#my-work" id="#my-work section"></class>
-    <div><!--open row that holds 2 columns for project-->
-    <div><!-- open first column (for image)-->
-    <picture>
-    <img src="Juniper Designs BACKGROUND.pdf" alt="My Image">
-    </picture>
-    </div><!-- end of first column-->
-    <div><!-- open second column(used for text)-->
-    <h3><code>Communal</code></h3><!-- heading for the project-->
-    <p>Communal is a social community-
-building app focusing on a barter
-and trade system to create stronger
-bonds within neighborhoods, towns,
-and cities. Sketch and Unsplash were my main sources for creating this app.</p>
-    <picture>
-      <img src="communal.jpeg" alt="Communal Image"></img>
-      </picture>
-    <a href="Communal.html" class="button">Read more</a>
-  </div><!-- end of second column-->
-  <div><!-- open second column(used for text)-->
-    <h3><code>Heim</code></h3><!-- heading for the project-->
-    <picture>
-  <img src="Heim Cover.jpg" alt="Heim Image">
-  </picture>
-<p>Heim, roughly translated from the Nordic word for “home,” is a responsive recipes app that is based in general accessibility for users of all learning styles. This app prototype offers resources like audio recital of recipes, to video links of the recipes being made, to picture
-representations of the ingredients
-lists. I used Sketch and Unsplash to
-develop each aspect of this app.
-</p>
-</div><!-- one row that holds two columns for project-->
-<div><!-- open second column(used for text)-->
-  <h3><code>Pocket Prosperity</code></h3><!-- heading for the project-->
-  <picture>
-<img src="Pocket Prosperity coverpage.jpeg" alt="Pocket Prospoerity Image">
-</picture>
-<p>When creating Pocket Prosperity,
-I wanted to put a spin on the
-finance apps I see out there, which
-consist mostly of dry, dull- colored
-graphs and lists. I wanted mine to
- be vibrant, playful, and take users
- back to when times were simpler
-and way more fun. I did this using
-Sketch and Unsplash, and guiding
-finance to a much less intimidating
-place.</p>
-</div><!-- one row that holds two columns for project-->
+    <div><h2><code>Greetings</code></h2>
+      <body id="#hero-section">
+    <h3>Juniper Stanley UX-UI Designer</h3>
+    <p>I am a UI/UX Designer based in
+      Denver, CO. Juniper Designs is
+      a minimalistic- styled company
+      specializing in curating various
+      design elements focused on
+      precision, customer satisfaction,
+      and innovative creativity. I love
+      being challenged through new
+      projects, and am always on the
+      lookout for positions in the
+      sustainability industry.</p>
+          <div>
+          <h2><code>My Work</code></h2>
+<body id="#my-work-section">
+          <div><!--open row that holds 2 columns for project-->
+          <div><!-- open first column (for image)-->
+          <picture>
+          <img src="IMG/Background Picture/Juniper Designs BACKGROUND.svg" alt="My Image">
+<src srcset="IMG/Background Picture/Juniper Designs BACKGROUND.svg" media="(max width 767px)" alt="My Image"></img>
+
+          </picture>
+          </div><!-- end of first column-->
+          <div><!-- open second column(used for text)-->
+          <h3><code>Communal</code></h3><!-- heading for the project-->
+          <p>Communal is a social community-
+      building app focusing on a barter
+      and trade system to create stronger
+      bonds within neighborhoods, towns,
+      and cities. Sketch and Unsplash were my main sources for creating this app.</p>
+          <picture>
+            <img src="IMG/Communal/communal coverpage.svg" media="(max-width:767px)" alt="Communal Image"></img>
+            <svg height="100px" width="100px"></svg>
+          </picture>
+          <a href="Communal.html" class="button">Read more</a>
+        </div><!-- end of second column-->
+        <div><!-- open second column(used for text)-->
+          <h3><code>Heim</code></h3><!-- heading for the project-->
+          <p>Heim, roughly translated from the Nordic word for home, is a
+          responsive recipes app that is based in general accessibility for
+          users of all learning styles. This app prototype offers resources like
+          audio recital of recipes, to video links of the recipes being made, to
+          picture representations of the ingredients lists. I used Sketch and
+          Unsplash to develop each aspect of this app.
+          </p>
+          <picture>
+        <img src="IMG/Heim/Heim Cover.svg" media="(max-width: 767px)" alt="Heim Image"></img>
+        <svg height="100px" width="100px"></svg>
+        </picture>
+        <a href="Heim.html" class="button">Read more</a>
+      </div><!-- end of second column-->
+
 </main>
 
 <footer>
-      <div>
-      <h2><code>Contact Me</code></h2>
-      <class="contact-section" id="#contact-section"><lclass>
-      <nav>
-      <ul>
-      <li>
-<a href="mailto:juniperstanley7@gmail.com">Email</a><!-- button or link label--></li>
-<a {
-color: #A8D069;
-text-decoration: none;
-}
-a:focus {
-color: #A8D069;
-text-decoration: underline;
-}</a>  <li><a href="tel:9287106413">Phone</a><!-- button or link label--></li>
+            <div>
+            <h2><code>Contact Me</code></h2>
+            <class="contact-section" id="#contact-section"><lclass>
+            <nav>
+            <ul>
+            <li>
+      <a href="mailto:juniperstanley7@gmail.com">Email</a></li>
+      <a {
+      color: #A8D069;
+      text-decoration: none;
+      }
+      <a:focus {
+      color: #A8D069;
+      text-decoration: underline;
+      }</a>
+      <li><a href="tel:9287106413">Phone</a></li>
       </ul>
       </nav>
       </div>
@@ -199,15 +191,16 @@ text-decoration: underline;
       <h3><code>Social Media</code></h3>
       <div>
       <ul>
-      <a href="https://twitter.com/juniper stanley" target="blank"><h4><code>Twitter</code></h4><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/></svg></a>
-          </ul>
+      <a href="https://www.twitter.com/juniper stanley" target="blank"><h4><code>Twitter</code></h4><svg height="100px" width="100px"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/600x400"></svg></a>
+        </ul>
             </div>
             <div>
               <ul>
 
-              <a href="https://www.linkedin.com/in/juniper-stanley-68944a160/" target="blank"><h4><code>LinkedIn</code></h4><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a>
+              <a href="https://www.linkedin.com/in/juniper-stanley-68944a160/" target="blank"><h4><code>LinkedIn</code></h4><svg height="100px" width="100px"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a>
           </ul>
             </div>
             <p>Copyright Juniper Stanley 2022</p>
     </footer>
+
     </body>
